--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "express": "^4.21.0",
+    "git": "^0.1.5",
     "mongodb": "^6.9.0",
     "path": "^0.12.7",
     "postcss-loader": "^8.1.1",
