--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "imy220project",
+  "name": "imy220-project",
   "version": "1.0.0",
-  "description": "Test line\r D0 Figma Link: https://www.figma.com/design/OBccse2Q8FyEW2PnCDAB9x/SonicGlow?node-id=10-994&t=Z9QLU2SSHKV8dbwT-1",
+  "description": "Project Figma Link: https://www.figma.com/design/OBccse2Q8FyEW2PnCDAB9x/SonicGlow?node-id=10-994&t=Z9QLU2SSHKV8dbwT-1",
   "main": "frontend/src/index.js",
   "scripts": {
     "build": "webpack && babel backend/server.js -d backend/dist",
@@ -9,21 +9,22 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.25.7",
     "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
-    "express": "^4.21.0",
-    "git": "^0.1.5",
-    "mongodb": "^6.9.0",
+    "express": "^4.21.1",
+    "file-loader": "^6.2.0",
+    "mongodb": "^6.10.0",
     "path": "^0.12.7",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "regenerator-runtime": "^0.14.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.13",
     "webpack": "^5.95.0",
